syntax="proto3";
package proto;
option go_package = "github.com/amodkala/database/pkg/raft";

import "google/protobuf/timestamp.proto";

service Raft {
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
}

message AppendEntriesRequest {
    uint32 term = 1;
    string leader_id = 2;
    uint32 prev_log_index = 3;
    uint32 prev_log_term = 4;
    repeated Entry entries = 5;
    uint32 leader_commit = 6;
}

message Entry {
    uint32 term = 1;
    bytes tx_id = 2;
    uint32 key = 3;
    string value = 4;

    google.protobuf.Timestamp create_time = 5;
}

message AppendEntriesResponse{
    uint32 term = 1;
    bool success = 2;
}

message RequestVoteRequest {
    uint32 term = 1;
    string candidate_id = 2;
    uint32 last_log_index = 3;
    uint32 last_log_term = 4;
}

message RequestVoteResponse {
    uint32 term = 1;
    bool vote_granted = 2;
}
